tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(
    x: [u32; 5],
    mut z: u32,
    t: u32,
    index: [Field; 5],
    index2: [Field; 5],
    offset: Field,
    sublen: Field,
) {
    let idx: Field = ((z - (5 * t)) - 5) as Field;
    dyn_array(x, idx, idx - 3);
    let mut s: Field = 0;
    let x3: [Field; 5] = [246, 159, 32, 176, 8];
    for i in 0..5 {
        s = s + x3[index[i]];
    }
    assert(s != 0);
    if 3 < (sublen as u32) {
        assert(index[offset + 3] == index2[3]);
    }
}

fn dyn_array(mut x: [u32; 5], y: Field, z: Field) {
    assert(x[y] == 111);
    assert(x[z] == 101);
    x[z] = 0;
    assert(x[y] == 111);
    assert(x[1] == 0);
    if (y as u32) < 10 {
        x[y] = x[y] - 2;
    } else {
        x[y] = 0;
    };
    assert(x[4] == 109);
}
